Updated login and getUser endpoints
