# docs/swagger.json
@@ -492,6 +492,9 @@
                 },
                 "refresh_token": {
                     "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
@@ -563,6 +566,12 @@
                     "type": "string"
                 },
                 "last_name": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                },
+                "verified": {
                     "type": "string"
                 }
             }
